--- a/app/src/main/res/layout - Copy/fragment_memorea_list.xml
+++ b/app/src/main/res/layout - Copy/fragment_memorea_list.xml
@@ -1,11 +1,10 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include
-        android:id="@+id/toolbar_fragment_memorea_list"
-        layout="@layout/toolbar"/>
+    <include layout="@layout/toolbar"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
