--- a/app/src/main/res/layout - Copy/memorea_card.xml
+++ b/app/src/main/res/layout - Copy/memorea_card.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:onClick="showCardInfo">
 
     <android.support.v7.widget.CardView xmlns:card="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view_memorea"
