--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <item name="darkorange" type="color">#FFFF8800</item>
     <item name="darkred" type="color">#FFCC0000</item>
     <item name="white" type="color">#FFFFFFFF</item>
+    <item name="action_bar" type="color">#FFB2DFDB</item>
 
     <integer-array name="androidcolors">
         <item>@color/blue</item>
@@ -24,6 +25,7 @@
         <item>@color/darkgreen</item>
         <item>@color/darkorange</item>
         <item>@color/darkred</item>
+        <item>@color/action_bar</item>
     </integer-array>
 
 </resources> 
