add ability to edit memorea, reorganized recyclerview adapter and list fragment

--- a/app/src/main/res/layout/fragment_memorea_list.xml
+++ b/app/src/main/res/layout/fragment_memorea_list.xml
@@ -1,11 +1,10 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:tag="fragment_memorea_list">
 
-    <include
-        android:id="@+id/toolbar_fragment_memorea_list"
-        layout="@layout/toolbar"/>
+    <include layout="@layout/toolbar"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
