--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="collapsible_toolbar_height">150dp</dimen>
     <dimen name="card_text_size">20sp</dimen>
+    <dimen name="memorize_screen_text_size">30sp</dimen>
 </resources>
