--- a/app/src/main/res/layout/fragment_memorize_screen.xml
+++ b/app/src/main/res/layout/fragment_memorize_screen.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/text_view_question"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:paddingBottom="50dp"
@@ -16,7 +16,7 @@
         android:textColor="@color/primary_text_default_material_light"/>
     <TextView
         android:id="@+id/text_view_hint"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:paddingBottom="50dp"
