--- a/app/src/main/res/layout/memorea_card.xml
+++ b/app/src/main/res/layout/memorea_card.xml
@@ -8,7 +8,10 @@
         android:id="@+id/card_view_memorea"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        card:cardCornerRadius="2dp">
+        card:cardCornerRadius="2dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true">
 
         <RelativeLayout
             android:id="@+id/relative_layout_memorea_card"
@@ -22,7 +25,13 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"/>
+                android:layout_alignParentStart="true"
+                android:layout_toLeftOf="@+id/text_view_next_memorization_label"
+                android:layout_toStartOf="@+id/text_view_next_memorization_label"
+                android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
+                android:maxLines="1"
+                android:ellipsize="end"/>
             <TextView
                 android:id="@+id/text_view_next_memorization_label"
                 android:layout_width="wrap_content"
@@ -38,6 +47,15 @@
                 android:layout_below="@id/text_view_next_memorization_label"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"/>
+            <TextView
+                android:id="@+id/text_view_special_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:visibility="gone"
+                android:textColor="@color/red"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
