--- a/app/src/main/res/layout/fragment_memorize_screen_answer.xml
+++ b/app/src/main/res/layout/fragment_memorize_screen_answer.xml
@@ -27,18 +27,21 @@
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:minWidth="0dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginEnd="25dp"
             android:onClick="answerWrong"
             android:text="@string/wrong"
             android:textColor="@color/button_text"
             android:textAllCaps="true"/>
-        <View
-            android:layout_width="50dp"
-            android:layout_height="match_parent"/>
         <Button
             android:id="@+id/button_give_hint"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:minWidth="0dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginStart="25dp"
             android:onClick="answerCorrect"
             android:text="@string/got_it"
             android:textColor="@color/button_text"
