--- a/app/src/main/res/layout/activity_memorea_info.xml
+++ b/app/src/main/res/layout/activity_memorea_info.xml
@@ -3,22 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/toolbar"/>
+    <include layout="@layout/collapsing_toolbar"/>
     <fragment
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/fragment_memorea_list"
-        android:name="com.memorease.memorease.MemoreaListFragment"
-        tools:layout="@layout/fragment_memorea_list"
+        android:id="@+id/fragment_memorea_info"
+        android:name="com.memorease.memorease.MemoreaInfoFragment"
+        tools:layout="@layout/fragment_memorea_info"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"/>
+        android:layout_marginTop="@dimen/collapsible_toolbar_height"/>
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/button_fab_add_memorea"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:src="@drawable/ic_add"
-        android:onClick="addMemorea"
-        app:layout_anchorGravity="center|left|start"/>
+        android:layout_width="wrap_content"
+        app:layout_anchor="@+id/appbar"
+        app:layout_anchorGravity="bottom|right|end"
+        android:src="@drawable/ic_edit"
+        android:onClick="editMemorea"/>
 </android.support.design.widget.CoordinatorLayout>
