--- a/app/src/main/res/layout/fragment_memorea_info.xml
+++ b/app/src/main/res/layout/fragment_memorea_info.xml
@@ -1,18 +1,15 @@
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
     tools:context="com.memorease.memorease.MemoreaInfoFragment"
     android:background="@color/background_material_light">
 
-    <include layout="@layout/collapsing_toolbar"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginTop="@dimen/collapsible_toolbar_height">
+        android:orientation="vertical">
 
         <GridLayout
             android:layout_width="match_parent"
@@ -59,11 +56,4 @@
                 android:textSize="@dimen/card_text_size"/>
         </GridLayout>
     </ScrollView>
-    <android.support.design.widget.FloatingActionButton
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        app:layout_anchor="@id/appbar"
-        app:layout_anchorGravity="bottom|right|end"
-        android:src="@drawable/ic_edit"
-        android:onClick="editMemorea"/>
-</android.support.design.widget.CoordinatorLayout>
+</FrameLayout>
