code cleanup, fixed bug with updating card, fixed bug with fab margins in lollipop

--- a/app/src/main/res/layout/fragment_add_memorea.xml
+++ b/app/src/main/res/layout/fragment_add_memorea.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/edit_text_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/title"
+                android:hint="@string/mTitle"
                 android:textSize="16sp"
                 android:maxLines="1"
                 android:inputType="textCapWords"/>
@@ -33,7 +33,7 @@
                 android:id="@+id/edit_text_question"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/question"
+                android:hint="@string/mQuestion"
                 android:textSize="16sp"
                 android:maxLines="1"
                 android:inputType="textCapSentences"/>
@@ -47,7 +47,7 @@
                 android:id="@+id/edit_text_answer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/answer"
+                android:hint="@string/mAnswer"
                 android:textSize="16sp"
                 android:inputType="textMultiLine|textCapSentences"/>
         </android.support.design.widget.TextInputLayout>
