--- a/app/src/main/res/layout/activity_memorea_info.xml
+++ b/app/src/main/res/layout/activity_memorea_info.xml
@@ -16,6 +16,7 @@
     <android.support.design.widget.FloatingActionButton
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:layout_margin="@dimen/fab_compat_margin"
         app:layout_anchor="@+id/appbar"
         app:layout_anchorGravity="bottom|right|end"
         android:src="@drawable/ic_edit"
