--- a/app/src/main/res/layout/activity_memorea_list.xml
+++ b/app/src/main/res/layout/activity_memorea_list.xml
@@ -18,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
+        android:layout_margin="@dimen/fab_compat_margin"
         android:src="@drawable/ic_add"
         android:onClick="addMemorea"
         app:layout_anchorGravity="center|left|start"/>
