--- a/app/src/main/res/layout/fragment_memorea_info.xml
+++ b/app/src/main/res/layout/fragment_memorea_info.xml
@@ -24,7 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/card_text_size"
-                android:text="Question: "/>
+                android:text="@string/question_label"/>
             <TextView
                 android:id="@+id/text_view_memorea_info_question"
                 android:layout_width="0dp"
@@ -35,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/card_text_size"
-                android:text="Answer: "/>
+                android:text="@string/answer_label"/>
             <TextView
                 android:id="@+id/text_view_memorea_info_answer"
                 android:layout_width="0dp"
@@ -47,7 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/card_text_size"
-                android:text="Hint: "/>
+                android:text="@string/hint_label"/>
             <TextView
                 android:id="@+id/text_view_memorea_info_hint"
                 android:layout_width="0dp"
