--- a/app/src/main/res/layout - Copy/fragment_memorea_info.xml
+++ b/app/src/main/res/layout - Copy/fragment_memorea_info.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
-    tools:context="com.memorease.memorease.MemoreaInfoFragment"
+    tools:context="com.tarian.memorease.MemoreaInfoFragment"
     android:background="@color/white">
 
     <include layout="@layout/collapsing_toolbar"/>
