--- a/app/src/main/res/layout/fragment_memorea_info.xml
+++ b/app/src/main/res/layout/fragment_memorea_info.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
-    tools:context="com.memorease.memorease.MemoreaInfoFragment"
+    tools:context="com.tarian.memorease.MemoreaInfoFragment"
     android:background="@color/background_material_light">
 
     <ScrollView
