--- a/app/src/main/res/layout/activity_memorea_info.xml
+++ b/app/src/main/res/layout/activity_memorea_info.xml
@@ -1,7 +1,8 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:clipToPadding="false">
 
     <include layout="@layout/collapsing_toolbar"/>
     <fragment
@@ -17,8 +18,10 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_margin="@dimen/fab_compat_margin"
-        app:layout_anchor="@+id/appbar"
-        app:layout_anchorGravity="bottom|right|end"
         android:src="@drawable/ic_edit"
-        android:onClick="editMemorea"/>
+        android:onClick="editMemorea"
+        android:elevation="6dp"
+        android:translationZ="8dp"
+        app:layout_anchor="@+id/appbar"
+        app:layout_anchorGravity="bottom|right|end"/>
 </android.support.design.widget.CoordinatorLayout>
