--- a/app/src/main/res/layout/activity_memorea_list.xml
+++ b/app/src/main/res/layout/activity_memorea_list.xml
@@ -1,7 +1,8 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:clipToPadding="false">
 
     <include layout="@layout/toolbar"/>
     <fragment
@@ -21,5 +22,7 @@
         android:layout_margin="@dimen/fab_compat_margin"
         android:src="@drawable/ic_add"
         android:onClick="addMemorea"
+        android:elevation="@dimen/fab_elevation"
+        android:translationZ="@dimen/fab_translation_z_pressed"
         app:layout_anchorGravity="center|left|start"/>
 </android.support.design.widget.CoordinatorLayout>
