--- a/app/src/main/res/layout/fragment_memorea_list.xml
+++ b/app/src/main/res/layout/fragment_memorea_list.xml
@@ -1,14 +1,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_material_light">
+    android:background="@color/background_material_light"
+    android:clipToPadding="false">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
-        android:background="@color/background_material_light"/>
+        android:background="@color/background_material_light"
+        android:clipToPadding="false"/>
     <TextView
         android:id="@+id/text_view_no_memoreas_set"
         android:layout_width="wrap_content"
