--- a/app/src/main/res/layout/fragment_memorize_screen.xml
+++ b/app/src/main/res/layout/fragment_memorize_screen.xml
@@ -41,7 +41,7 @@
         android:gravity="center_horizontal">
 
         <Button
-            android:id="@+id/button_give_hint"
+            android:id="@+id/button_hint"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
