--- a/app/src/main/res/layout/fragment_memorize_screen_answer.xml
+++ b/app/src/main/res/layout/fragment_memorize_screen_answer.xml
@@ -35,7 +35,7 @@
             android:textColor="@color/button_text"
             android:textAllCaps="true"/>
         <Button
-            android:id="@+id/button_give_hint"
+            android:id="@+id/button_hint"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
