--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <item name="darkorange" type="color">#FFFF8800</item>
     <item name="darkred" type="color">#FFCC0000</item>
     <item name="white" type="color">#FFFFFFFF</item>
+    <item name="black" type="color">#FF000000</item>
     <item name="action_bar" type="color">#FF80CBC4</item>
     <item name="memorize_screen_action_bar" type="color">#FFEF9A9A</item>
     <color name="button_text" type="color">#FF1E88E5</color>
@@ -27,5 +28,6 @@
         <item>@color/darkgreen</item>
         <item>@color/darkorange</item>
         <item>@color/darkred</item>
+        <item>@color/black</item>
     </integer-array>
 </resources>
