--- a/app/src/main/res/layout-sw600dp/activity_memorea_list.xml
+++ b/app/src/main/res/layout-sw600dp/activity_memorea_list.xml
@@ -17,6 +17,7 @@
             tools:layout="@layout/fragment_memorea_list"
             android:layout_width="300dp"
             android:layout_height="fill_parent"
+            android:background="@color/background_material_light"
             android:elevation="5dp"/>
         <View
             android:id="@+id/view_separator"
