--- a/app/src/main/res/layout - Copy/fragment_add_memorea.xml
+++ b/app/src/main/res/layout - Copy/fragment_add_memorea.xml
@@ -5,19 +5,19 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:padding="16dp"
         android:orientation="vertical">
 
         <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="16dp"
             android:textSize="16sp">
             <EditText
                 android:id="@+id/edit_text_title"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:mHint="@string/mTitle"
                 android:textSize="16sp"
@@ -25,13 +25,13 @@
                 android:inputType="textCapWords"/>
         </android.support.design.widget.TextInputLayout>
         <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="16dp"
             android:textSize="16sp">
             <EditText
                 android:id="@+id/edit_text_question"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:mHint="@string/mQuestion"
                 android:textSize="16sp"
@@ -39,25 +39,25 @@
                 android:inputType="textCapSentences"/>
         </android.support.design.widget.TextInputLayout>
         <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="16dp"
             android:textSize="16sp">
             <EditText
                 android:id="@+id/edit_text_answer"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:mHint="@string/mAnswer"
                 android:textSize="16sp"
                 android:inputType="textMultiLine|textCapSentences"/>
         </android.support.design.widget.TextInputLayout>
         <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="16sp">
             <EditText
                 android:id="@+id/edit_text_hint"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:mHint="@string/hint_optional"
                 android:textSize="16sp"
