--- a/app/src/main/res/layout - Copy/fragment_memorea_info.xml
+++ b/app/src/main/res/layout - Copy/fragment_memorea_info.xml
@@ -2,22 +2,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fragment_memorea_info"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:clickable="true"
     tools:context="com.tarian.memorease.MemoreaInfoFragment"
     android:background="@color/white">
 
     <include layout="@layout/collapsing_toolbar"/>
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:orientation="vertical"
         android:layout_marginTop="@dimen/collapsible_toolbar_height">
 
         <GridLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:columnCount="2"
             android:useDefaultMargins="true"
             android:paddingTop="35dp">
