--- a/app/src/main/res/layout - Copy/memorea_card.xml
+++ b/app/src/main/res/layout - Copy/memorea_card.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:padding="10dp"
     android:onClick="showCardInfo">
 
     <android.support.v7.widget.CardView xmlns:card="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view_memorea"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         card:cardCornerRadius="2dp">
 
         <RelativeLayout
             android:id="@+id/relative_layout_memorea_card"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:padding="16dp">
 
             <TextView
