--- a/app/src/main/res/layout - Copy/toolbar.xml
+++ b/app/src/main/res/layout - Copy/toolbar.xml
@@ -2,12 +2,12 @@
 <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/appbar"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/action_bar"
         app:layout_collapseMode="parallax" />
