--- a/app/src/main/res/layout-sw600dp/activity_memorea_list.xml
+++ b/app/src/main/res/layout-sw600dp/activity_memorea_list.xml
@@ -1,13 +1,13 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:clipToPadding="false">
 
     <include layout="@layout/toolbar"/>
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_marginTop="?attr/actionBarSize">
         <fragment
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -52,11 +52,11 @@
         android:id="@+id/button_fab_add_memorea"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
+        android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_compat_margin"
         android:src="@drawable/ic_add"
         android:onClick="addMemorea"
-        android:elevation="@dimen/fab_elevation"
-        android:translationZ="@dimen/fab_translation_z_pressed"
-        app:layout_anchorGravity="center|left|start"/>
+        app:borderWidth="0dp"
+        app:fabSize="normal"
+        app:layout_anchorGravity="bottom|right|end"/>
 </android.support.design.widget.CoordinatorLayout>
