--- a/app/src/main/res/layout/activity_memorea_info.xml
+++ b/app/src/main/res/layout/activity_memorea_info.xml
@@ -1,7 +1,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:clipToPadding="false">
 
     <include layout="@layout/collapsing_toolbar"/>
@@ -11,8 +11,8 @@
         android:id="@+id/fragment_memorea_info"
         android:name="com.tarian.memorease.MemoreaInfoFragment"
         tools:layout="@layout/fragment_memorea_info"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_marginTop="@dimen/collapsible_toolbar_height"/>
     <android.support.design.widget.FloatingActionButton
         android:layout_height="wrap_content"
@@ -20,8 +20,8 @@
         android:layout_margin="@dimen/fab_compat_margin"
         android:src="@drawable/ic_edit"
         android:onClick="editMemorea"
-        android:elevation="6dp"
-        android:translationZ="8dp"
+        app:borderWidth="0dp"
+        app:fabSize="normal"
         app:layout_anchor="@+id/appbar"
         app:layout_anchorGravity="bottom|right|end"/>
 </android.support.design.widget.CoordinatorLayout>
