--- a/app/src/main/res/layout/fragment_memorea_info.xml
+++ b/app/src/main/res/layout/fragment_memorea_info.xml
@@ -1,19 +1,19 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:clickable="true"
     tools:context="com.tarian.memorease.MemoreaInfoFragment"
     android:background="@color/background_material_light">
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:orientation="vertical">
 
         <GridLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:columnCount="2"
             android:useDefaultMargins="true"
             android:paddingTop="35dp"
