--- a/app/src/main/res/layout/fragment_memorize_screen.xml
+++ b/app/src/main/res/layout/fragment_memorize_screen.xml
@@ -1,13 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context="com.tarian.memorease.MemorizeScreenFragment"
     android:background="@color/background_material_light">
 
     <TextView
         android:id="@+id/text_view_question"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:paddingBottom="50dp"
@@ -16,7 +16,7 @@
         android:textColor="@color/primary_text_default_material_light"/>
     <TextView
         android:id="@+id/text_view_hint"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:paddingBottom="50dp"
@@ -34,7 +34,7 @@
         android:layout_below="@id/text_view_hint"/>
     <LinearLayout
         android:id="@+id/buttons"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/text_view_hint"
