--- a/app/src/main/res/layout/fragment_memorize_screen_answer.xml
+++ b/app/src/main/res/layout/fragment_memorize_screen_answer.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context="com.tarian.memorease.MemorizeScreenAnswerFragment"
     android:background="@color/background_material_light"
     android:clickable="true">
@@ -17,7 +17,7 @@
         android:textColor="@color/primary_text_default_material_light"/>
     <LinearLayout
         android:id="@+id/buttons"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/text_view_answer"
