--- a/app/src/main/res/layout/memorea_card.xml
+++ b/app/src/main/res/layout/memorea_card.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:padding="10dp">
 
     <android.support.v7.widget.CardView xmlns:card="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view_memorea"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        card:cardCornerRadius="2dp"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:foreground="?android:attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
-        android:elevation="2dp">
+        card:cardCornerRadius="2dp"
+        card:cardElevation="2sp"
+        card:cardUseCompatPadding="true">
 
         <RelativeLayout
             android:id="@+id/relative_layout_memorea_card"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:padding="16dp">
 
             <TextView
