--- a/app/src/main/res/layout-sw600dp/activity_memorea_list.xml
+++ b/app/src/main/res/layout-sw600dp/activity_memorea_list.xml
@@ -1,4 +1,4 @@
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -59,4 +59,4 @@
         app:borderWidth="0dp"
         app:fabSize="normal"
         app:layout_anchorGravity="bottom|right|end"/>
-</android.support.design.widget.CoordinatorLayout>
+</FrameLayout>
