--- a/app/src/main/res/layout/activity_memorea_list.xml
+++ b/app/src/main/res/layout/activity_memorea_list.xml
@@ -2,7 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:clipToPadding="false">
+    android:clipToPadding="false"
+    android:background="@color/background_material_light">
 
     <include layout="@layout/toolbar"/>
     <fragment
