--- a/app/src/main/res/layout/activity_memorize_screen.xml
+++ b/app/src/main/res/layout/activity_memorize_screen.xml
@@ -10,7 +10,7 @@
         android:id="@+id/appbar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:textColorPrimary="@color/white">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -35,5 +35,6 @@
         android:id="@+id/fragment_holder"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@id/appbar"/>
+        android:layout_below="@id/appbar"
+        android:background="@null"/>
 </RelativeLayout>
