--- a/app/src/main/res/layout/fragment_memorea_list.xml
+++ b/app/src/main/res/layout/fragment_memorea_list.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/background_material_light"
+    android:background="@null"
     android:clipToPadding="false">
 
     <android.support.v7.widget.RecyclerView
@@ -9,7 +9,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:scrollbars="vertical"
-        android:background="@color/background_material_light"
+        android:background="@null"
         android:clipToPadding="false"/>
     <TextView
         android:id="@+id/text_view_no_memoreas_set"
