--- a/app/src/main/res/layout/fragment_memorize_screen.xml
+++ b/app/src/main/res/layout/fragment_memorize_screen.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     tools:context="com.tarian.memorease.MemorizeScreenFragment"
-    android:background="@color/background_material_light">
+    android:background="@null">
 
     <TextView
         android:id="@+id/text_view_question"
@@ -38,7 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/text_view_hint"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:background="@null">
 
         <Button
             android:id="@+id/button_hint"
