--- a/app/src/main/res/layout/memorea_card.xml
+++ b/app/src/main/res/layout/memorea_card.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:background="@null">
 
     <android.support.v7.widget.CardView xmlns:card="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view_memorea"
@@ -19,7 +20,8 @@
             android:id="@+id/relative_layout_memorea_card"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:padding="16dp">
+            android:padding="16dp"
+            android:background="@null">
 
             <TextView
                 android:id="@+id/text_view_memorea_title"
