--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,7 +4,7 @@
     android:id="@+id/appbar"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+    android:textColorPrimary="@color/white">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
