--- a/app/src/main/res/layout-sw600dp/activity_memorea_list.xml
+++ b/app/src/main/res/layout-sw600dp/activity_memorea_list.xml
@@ -9,44 +9,24 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginTop="?attr/actionBarSize">
-        <fragment
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/fragment_memorea_list"
-            android:name="com.tarian.memorease.MemoreaListFragment"
-            tools:layout="@layout/fragment_memorea_list"
+
+        <FrameLayout
+            android:id="@+id/fragment_container"
             android:layout_width="300dp"
-            android:layout_height="fill_parent"
-            android:background="@color/background_material_light"
-            android:elevation="5dp"/>
+            android:layout_height="fill_parent"/>
         <View
             android:id="@+id/view_separator"
             android:layout_width="1dp"
             android:layout_height="fill_parent"
-            android:layout_toRightOf="@id/fragment_memorea_list"
+            android:layout_toRightOf="@id/fragment_container"
+            android:layout_toEndOf="@id/fragment_container"
             android:background="@color/black"/>
-        <fragment
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/fragment_memorea_info"
-            android:name="com.tarian.memorease.MemoreaInfoFragment"
-            tools:layout="@layout/fragment_memorea_info"
+        <FrameLayout
+            android:id="@+id/fragment_info_container"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_toRightOf="@id/view_separator"/>
-        <Button
-            android:id="@+id/button_edit"
-            style="?android:attr/borderlessButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignLeft="@id/fragment_memorea_info"
-            android:layout_alignStart="@id/fragment_memorea_info"
-            android:onClick="editMemorea"
-            android:text="Edit"
-            android:textColor="@color/button_text"
-            android:textAllCaps="true"
-            android:alpha="0"/>
+            android:layout_toRightOf="@id/view_separator"
+            android:layout_toEndOf="@id/view_separator"/>
     </RelativeLayout>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/button_fab_add_memorea"
