--- a/app/src/main/res/layout/activity_memorea_info.xml
+++ b/app/src/main/res/layout/activity_memorea_info.xml
@@ -2,15 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:clipToPadding="false">
+    android:clipToPadding="false"
+    android:background="@null">
 
     <include layout="@layout/collapsing_toolbar"/>
-    <fragment
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/fragment_memorea_info"
-        android:name="com.tarian.memorease.MemoreaInfoFragment"
-        tools:layout="@layout/fragment_memorea_info"
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginTop="@dimen/collapsible_toolbar_height"/>
