--- a/app/src/main/res/layout/activity_memorea_list.xml
+++ b/app/src/main/res/layout/activity_memorea_list.xml
@@ -6,12 +6,8 @@
     android:background="@color/background_material_light">
 
     <include layout="@layout/toolbar"/>
-    <fragment
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/fragment_memorea_list"
-        android:name="com.tarian.memorease.MemoreaListFragment"
-        tools:layout="@layout/fragment_memorea_list"
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginTop="?attr/actionBarSize"/>
