--- a/app/src/main/res/layout/activity_memorize_screen.xml
+++ b/app/src/main/res/layout/activity_memorize_screen.xml
@@ -32,7 +32,7 @@
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
     <FrameLayout
-        android:id="@+id/fragment_holder"
+        android:id="@+id/frame_layout_fragment_holder"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_below="@id/appbar"
