--- a/app/src/main/res/layout/fragment_memorea_info.xml
+++ b/app/src/main/res/layout/fragment_memorea_info.xml
@@ -1,56 +1,61 @@
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:clickable="true"
     tools:context="com.tarian.memorease.MemoreaInfoFragment"
-    android:background="@null"
-    android:orientation="vertical">
+    android:background="@color/background_material_light">
 
-    <GridLayout
+    <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:columnCount="2"
-        android:useDefaultMargins="true"
-        android:paddingTop="35dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@null">
+        android:layout_height="fill_parent"
+        android:background="@null"
+        android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <GridLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/card_text_size"
-            android:text="@string/question_label"/>
-        <TextView
-            android:id="@+id/text_view_memorea_info_question"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="fill_horizontal"
-            android:textSize="@dimen/card_text_size"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/card_text_size"
-            android:text="@string/answer_label"/>
-        <TextView
-            android:id="@+id/text_view_memorea_info_answer"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="fill_horizontal"
-            android:textSize="@dimen/card_text_size"/>
-        <TextView
-            android:id="@+id/text_view_memorea_info_hint_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/card_text_size"
-            android:text="@string/hint_label"/>
-        <TextView
-            android:id="@+id/text_view_memorea_info_hint"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="fill_horizontal"
-            android:textSize="@dimen/card_text_size"/>
-    </GridLayout>
-</ScrollView>
+            android:columnCount="2"
+            android:useDefaultMargins="true"
+            android:paddingTop="35dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@null">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/card_text_size"
+                android:text="@string/question_label"/>
+            <TextView
+                android:id="@+id/text_view_memorea_info_question"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="fill_horizontal"
+                android:textSize="@dimen/card_text_size"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/card_text_size"
+                android:text="@string/answer_label"/>
+            <TextView
+                android:id="@+id/text_view_memorea_info_answer"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="fill_horizontal"
+                android:textSize="@dimen/card_text_size"/>
+            <TextView
+                android:id="@+id/text_view_memorea_info_hint_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/card_text_size"
+                android:text="@string/hint_label"/>
+            <TextView
+                android:id="@+id/text_view_memorea_info_hint"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="fill_horizontal"
+                android:textSize="@dimen/card_text_size"/>
+        </GridLayout>
+    </ScrollView>
+</FrameLayout>
